<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.manage.ManageActivity">


    <TextView
        android:id="@+id/actManageTvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:fontFamily="@font/nanum_square_r"
        android:text="@string/manage_save_timeset"
        android:textColor="@color/ux_black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/actManageTvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/nanum_square_r"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textColor="@color/ux_black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/actManageTvTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/actManageTvTitle" />

    <TextView
        android:id="@+id/actManageTvOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/nanum_square_r"
        android:padding="15dp"
        android:text="@string/complete"
        android:textColor="@color/ux_black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/actManageTvTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/actManageTvTitle" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actManageTvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="37dp"
                android:fontFamily="@font/nanum_square_r"
                android:text="@string/timeset_order_text"
                android:textColor="@color/ux_black"
                android:textSize="15dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actManageRvCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/actManageTvRemoveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nanum_square_r"
                android:text="@string/deleted_timeset"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:visibility="invisible" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actManageRvRemove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>